--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,12 +1,13 @@
 {
   "manifest_version": 3,
-  "version": "1.1",
-  "name": "Trollana Socials Reply Helper",
-  "description": "Earn TROLLANA while having fun on socials!",
+  "version": "1.0.0",
+
+  "name": "Trollana AI",
+  "description": "Trollana's AI Social Reply Generator - Turning ordinary exchanges into moments of laughter & lightening up the X atmosphere",
   "background": {
     "service_worker": "background.js"
   },
-  "permissions": ["activeTab", "tabs", "storage", "alarms", "clipboardWrite"],
+  "permissions": ["storage", "clipboardWrite"],
   "action": {
     "default_popup": "popup.html",
     "default_icon": "icon-34.png"
