--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,8 +2,8 @@
   "manifest_version": 3,
   "version": "1.1.1",
 
-  "name": "Trollana AI",
-  "description": "Trollana's AI Social Reply Generator - Turning ordinary exchanges into moments of laughter & lightening up the X atmosphere",
+  "name": "Trollana AI Social Reply Generator",
+  "description": "Turning ordinary exchanges into moments of laughter & lightening up the X atmosphere",
   "background": {
     "service_worker": "background.js"
   },
