--- a/src/manifest.json
+++ b/src/manifest.json
@@ -24,6 +24,10 @@
       "matches": ["https://twitter.com/*", "https://app.trollana.vip/*"]
     }
   ],
+  "options_ui": {
+    "page": "options.html",
+    "open_in_tab": true
+  },
   "icons": {
     "48": "icon-34.png",
     "128": "icon-128.png"
